--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,11 +10,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -25,7 +25,10 @@ jobs:
       - name: Build and Tag Docker Image
         run: |
           echo "Building Docker image..."
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/wiiks-app:latest .
+          docker build \
+            --build-arg VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }} \
+            --build-arg VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }} \
+            -t ${{ secrets.DOCKER_USERNAME }}/wiiks-app:latest .
 
       - name: Push Docker Image to Docker Hub
         run: |
@@ -47,9 +50,6 @@ jobs:
             }' \
             https://api.github.com/repos/${{ github.repository }}/deployments)
           
-          echo "GitHub API Response:"
-          echo "$RESPONSE"
-
           DEPLOYMENT_ID=$(echo "$RESPONSE" | jq -r '.id')
           if [ "$DEPLOYMENT_ID" == "null" ] || [ -z "$DEPLOYMENT_ID" ]; then
             echo "Failed to create deployment. Response:"
